# zebra_tree_indexer

./: .gitignore  Cargo.toml  README.md  context.md  meta-prompt.md  models.toml
benches/: Cargo.toml  score_bench.rs
crates/apps/zebra-dsl/: Cargo.toml
crates/apps/zebra-dsl/src/: main.rs
crates/apps/zebra-embed/: Cargo.toml
crates/apps/zebra-embed/src/: main.rs
crates/apps/zebra-mcp/: Cargo.toml
crates/apps/zebra-mcp/src/: main.rs
crates/apps/zebraindex/: Cargo.toml
crates/apps/zebraindex/src/: cli.rs  dsl.rs  main.rs  mcp.rs
crates/apps/zebraindex/src/tui/: actions.rs  app.rs  config.rs  event.rs  mod.rs  setup.rs  tasks.rs  ui.rs
crates/apps/zebraindex/src/tui/widgets/: modals.rs  projects.rs  results.rs  search.rs  setup.rs  status_bar.rs
crates/zti-ann/: Cargo.toml
crates/zti-ann/src/: cache.rs  hnsw.rs  lib.rs  method.rs  selector.rs  usearch_graph.rs
crates/zti-common/: Cargo.toml
crates/zti-common/src/: chunk_strategy.rs  dsl.rs  lib.rs  paths.rs
crates/zti-daemon/: Cargo.toml
crates/zti-daemon/src/: lib.rs  listener.rs  main.rs  state.rs  watch.rs
crates/zti-daemon/src/handlers/: daemon_status.rs  doctor.rs  dsl_dep_tree.rs  dsl_file_tree.rs  dsl_project_map.rs  dsl_search_dep.rs  dsl_symbol_bodies.rs  dsl_symbol_body.rs  env.rs  handshake.rs  index.rs  mod.rs  remove_project.rs  search.rs  status.rs
crates/zti-dsl/src/: batch.rs  chunking.rs  index.rs  lib.rs  model.rs  search_dep.rs
crates/zti-dsl/src/render/: dsl.rs  mod.rs  tree.rs
crates/zti-embed/: Cargo.toml
crates/zti-embed/src/: any.rs  batch.rs  bert.rs  engine.rs  jina_bert.rs  lib.rs  model_registry.rs  pooling.rs  tokenizer.rs
crates/zti-hw-metal/: Cargo.toml
crates/zti-hw-metal/src/: lib.rs
crates/zti-hw/src/: lib.rs
crates/zti-ipc-client/: Cargo.toml
crates/zti-ipc-client/src/: client.rs  spawn.rs
crates/zti-pipeline/: Cargo.toml
crates/zti-pipeline/src/: chat.rs  indexer.rs  lib.rs  manifest.rs  progress.rs  search.rs
crates/zti-protocol/: Cargo.toml
crates/zti-protocol/src/: codec.rs  lib.rs  render.rs  request.rs  response.rs
crates/zti-recursive-chunk/: Cargo.toml
crates/zti-recursive-chunk/src/: atom.rs  lib.rs  merge.rs  positions.rs
crates/zti-remote-embed/: Cargo.toml
crates/zti-remote-embed/src/: client.rs  engine.rs  lib.rs  models.rs  provider.rs
crates/zti-rerank/src/: gpu.rs  turbo.rs
crates/zti-rerank/tests/: score_parity.rs
crates/zti-store/: Cargo.toml
crates/zti-store/src/: chunks_table.rs  db.rs  delete_filter.rs  files_table.rs  lib.rs  projects_table.rs  schema.rs  upsert.rs
crates/zti-tree-sitter/src/: detect.rs  lib.rs  parse_args.rs  registry.rs
crates/zti-ts-core/src/: config.rs  lib.rs  types.rs  walker.rs
crates/zti-ts-dart/src/: lib.rs
crates/zti-ts-go/: Cargo.toml
crates/zti-ts-go/src/: lib.rs
crates/zti-ts-javascript/: Cargo.toml
crates/zti-ts-javascript/src/: lib.rs
crates/zti-ts-python/: Cargo.toml
crates/zti-ts-python/src/: lib.rs
crates/zti-ts-rust/src/: lib.rs
crates/zti-ts-solidity/src/: lib.rs
crates/zti-ts-typescript/src/: lib.rs
site/: astro.config.mjs  package.json
site/public/: CNAME
site/src/layouts/: DocsLayout.astro
site/src/pages/: index.astro
site/src/pages/docs/: index.mdx  install.mdx  languages.mdx  mcp-tools.mdx  models.mdx
site/src/scripts/: scene.js
site/src/styles/: global.css
