[package]
name = "zti-ann"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hnsw_rs = "0.3"
zti-hw-core.workspace = true
tokio = { workspace = true, features = ["sync"] }
