[package]
name = "zti-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
candle-core.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
zti-hw.workspace = true
zti-common.workspace = true
zti-remote-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
arrow.workspace = true
arrow-array.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
candle-nn = { workspace = true, features = ["metal"] }
candle-transformers = { workspace = true, features = ["metal"] }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = { workspace = true, features = ["cuda"] }

[features]
clap = ["dep:clap"]

[dependencies.clap]
workspace = true
optional = true
