[package]
name = "zti-hw-metal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
ort = { workspace = true, features = ["coreml"] }
zti-common.workspace = true
zti-hw-core.workspace = true
