[package]
name = "zti-ts-javascript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript = "0.25"
zti-ts-core.workspace = true

[dev-dependencies]
indoc.workspace = true
