[package]
name = "zebra-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zebra-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zti-common.workspace = true
zti-dsl.workspace = true
zti-ipc-client.workspace = true
zti-protocol.workspace = true
zti-store.workspace = true
zti-tree-sitter.workspace = true
tokio.workspace = true
serde.workspace = true
rmcp.workspace = true
schemars.workspace = true
